--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
+// package.json
 {
-  "name": "your-project-name",
+  "name": "text-to-speech-app",
   "version": "1.0.0",
-  "description": "Text to Speech app using ElevenLabs API",
+  "description": "Text-to-speech app with ElevenLabs and Firebase",
   "main": "index.js",
   "scripts": {
-    "start": "node api/tts.js",
-    "dev": "vercel dev",
-    "build": "vercel build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^9.6.1",
-    "node-fetch": "^2.6.1"
+    "firebase": "^10.0.0",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vercel": "^28.0.0"
-  },
-  "engines": {
-    "node": "14.x"
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6"
   }
 }
